# genesis-task-executor

./: README.md  pyproject.toml
genesis_task_executor/: __init__.py  cli.py  db.py  dispatcher.py  engine.py  prompts.py  protocols.py  recovery.py  research.py  review.py  state_machine.py  step_runner.py  tools.py  types.py
genesis_task_executor/providers/: __init__.py  anthropic.py  openai.py
tests/: conftest.py  test_db.py  test_dispatcher.py  test_engine.py  test_integration.py  test_prompts.py  test_recovery.py  test_review.py  test_state_machine.py  test_tools.py  test_types.py
