[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genesis-task-executor"
version = "1.0.0"
description = "Autonomous LLM task executor with formal state machine, 4-layer failure recovery, and adversarial verification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Genesis", email = "genesis@genesis"}]
keywords = ["llm", "task-executor", "autonomous", "adversarial-verification", "state-machine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiosqlite>=0.20",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.40"]
ui = ["streamlit>=1.30"]
all = ["openai>=1.30", "anthropic>=0.40", "streamlit>=1.30"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
genesis-task-executor = "genesis_task_executor.cli:main"

[project.urls]
Homepage = "https://github.com/WingedGuardian/genesis-task-executor"
Repository = "https://github.com/WingedGuardian/genesis-task-executor"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
